--- a/todo
+++ b/todo
@@ -1,12 +1,12 @@
 
- R Allocatie
- R Hoare types
+ ✓ Allocatie
+ ? Hoare types
  W Hoare logic
     W sequence
     W theorems mbt mutation operaties
  ? While
- ? Denotational semantics
-    ? equivalantie met small step
+ R Denotational semantics
+    R equivalentie met small step
  ? Normalisation
  ? Type safety (progress)
 
