fix hoare logic section type

--- a/report.tex
+++ b/report.tex
@@ -149,7 +149,7 @@ extend the representation of values to be able to reference the heap
 shape, because variable values have to carry the proof that they are
 consistent with a heap.
 
-\section{Hoare logic}
+\subsection{Hoare logic}
 
 % TODO (Koen)
 
